test/vm/fails/recursive_loop.js

function func(a, b, c, d) {
	func(a, b, c, d);
}

func(1, 2, 3, 4);
